# SolarProductionModel_location_Unirea

./: .gitignore  CLAUDE.md  Dockerfile  EMAIL_SETUP.md  README.md  docker-compose.yml  pyproject.toml  railway.json  render.yaml  requirements.txt
.github/workflows/: README.md  daily-solar-forecast-unirea.yml
scripts/: config.py  email_forecast_service.py  export_forecast_to_excel.py  export_weather_parameters.py  forecast_comparison.py  intraday_aggregator.py  intraday_forecast_model.py  intraday_system_with_spm.py  intraday_weather_fetcher.py  run_forecast_and_email.py  run_intraday_cm.py  send_forecast_zoho.py  smart_persistence_model.py
