[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "solar-production-model"
version = "3.0.0"
description = "Solar energy production forecasting system for Romania with ML/Physics models"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Vlad Bordei", email = "bordeivlad@gmail.com" }
]
license = { text = "MIT" }
keywords = ["solar", "energy", "forecasting", "machine learning", "renewable energy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pytz>=2023.3",
    "catboost>=1.2.0",
    "scikit-learn>=1.3.0",
    "requests>=2.31.0",
    "pvlib>=0.10.0",
    "openpyxl>=3.0.0",
    "ephem>=4.1.0",
    "schedule>=1.2.0",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "ipython>=8.0.0",
]

[project.scripts]
solar-forecast = "scripts.run_intraday_cm:main"
solar-forecast-longterm = "scripts.main_forecast:main"
solar-email = "scripts.send_forecast_zoho:main"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --cov=scripts --cov-report=html --cov-report=term"